--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,8 +33,9 @@ body {
     background-color: green;
 }
 #container {
-    width: 1000px;
-    height: 700px;
+    width: 70vw;
+    max-width: 1000px;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.6);
     margin: 50px auto;
     padding: 10px;
@@ -42,8 +43,9 @@ body {
 }
 #gallery {
     margin: auto auto;
-    width: 1000px;
-    height: 700px;
+    width: 70vw;
+    max-width: 1000px;
+    /* height: 50vh; */
     overflow: auto;
     display: flex;
     flex-direction: row;
@@ -52,11 +54,13 @@ body {
 }
 figure {
     scroll-snap-align: center;
-    width: 750px;
+    width: 60vw;
+    max-width: 900px;
     margin: 20px 125px;
 }
 img {
-    width: 750px;
+    width: 60vw;
+    max-width: 900px;
     margin: auto auto;
     border-radius: 30px;
 }
